examples/test/testpolicy19378.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19378
  namespace: namespace186
spec:
  podSelector:
    matchLabels:
      key45: value40
      key9: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value0
          key19: value47
          key0: value22
      podSelector:
        matchLabels:
          key5: value38
          key32: value47
          key17: value29
